sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:8: error: not found: value pos1
    pos1=i
    ^AlgBubbleSort1:9: error: not found: value pos2
    pos2=i+1
    ^AlgBubbleSort1:10: error: not found: value pos1
    test1=getValeur(pos1)
                    ^AlgBubbleSort1:11: error: not found: value pos2
    test2=getValeur(pos2)
                    ^AlgBubbleSort1:14: error: not found: value pos2
      maxpos=pos2
             ^